Finalizando a estrutura do index.html

--- a/index.html
+++ b/index.html
@@ -5,11 +5,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cat place</title>
+    <title>Biblioteca de Gatos</title>
 </head>
 
 <body>
-
+    <div class="wrapper">
+        <div class="row">
+            <section class="col-4 main-title">
+                <h1>Biblioteca de Gatos</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore quaerat molestiae quibusdam nemo
+                    accusamus suscipit atque dicta blanditiis.</p>
+            </section>
+        </div>
+        <div class="row">
+            <section class="col-1-2">
+                <h2>Gatuna</h2>
+                <img src="http://placekitten.com/250/300" alt="imagem de um gato">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima inventore corrupti, aliquam sed</p>
+                <a href="#">Leia Mais ..</a>
+            </section>
+        </div>
+        <div class="row">
+            <section class="col-1-2">
+                <h2>Gatuna</h2>
+                <img src="http://placekitten.com/g/250/300" alt="imagem de um gato">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima inventore corrupti, aliquam sed</p>
+                <a href="#">Leia Mais ..</a>
+            </section>
+        </div>
+        <div class="row">
+            <section class="col-1-2">
+                <h2>Gatuna</h2>
+                <img src="http://placekitten.com/275/330" alt="imagem de um gato">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima inventore corrupti, aliquam sed</p>
+                <a href="#">Leia Mais ..</a>
+            </section>
+        </div>
+        <div class="row">
+            <section class="col-1-2">
+                <h2>Gatuna</h2>
+                <img src="http://placekitten.com/g/275/330" alt="imagem de um gato">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima inventore corrupti, aliquam sed</p>
+                <a href="#">Leia Mais ..</a>
+                lore
+            </section>
+        </div>
+    </div>
 </body>
 
 </html>
