--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Biblioteca de Gatos</title>
+    <!-- CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -16,40 +18,92 @@
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore quaerat molestiae quibusdam nemo
                     accusamus suscipit atque dicta blanditiis.</p>
             </section>
-        </div>
+        <div>
         <div class="row">
             <section class="col-1-2">
                 <h2>Gatuna</h2>
                 <img src="http://placekitten.com/250/300" alt="imagem de um gato">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima inventore corrupti, aliquam sed</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima inventore corrupti, aliquam
+                    sed
+                </p>
                 <a href="#">Leia Mais ..</a>
             </section>
-        </div>
-        <div class="row">
             <section class="col-1-2">
-                <h2>Gatuna</h2>
+                <h2>Gatinho</h2>
                 <img src="http://placekitten.com/g/250/300" alt="imagem de um gato">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima inventore corrupti, aliquam sed</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima inventore corrupti, aliquam
+                    sed
+                </p>
                 <a href="#">Leia Mais ..</a>
             </section>
-        </div>
-        <div class="row">
             <section class="col-1-2">
-                <h2>Gatuna</h2>
+                <h2>Gata</h2>
                 <img src="http://placekitten.com/275/330" alt="imagem de um gato">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima inventore corrupti, aliquam sed</p>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima inventore corrupti, aliquam
+                    sed
+                </p>
+                <a href="#">Leia Mais ..</a>
+            </section>
+            <section class="col-1-2">
+                <h2>Felino</h2>
+                <img src="http://placekitten.com/g/275/330" alt="imagem de um gato">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima inventore corrupti, aliquam
+                    sed
+                </p>
                 <a href="#">Leia Mais ..</a>
             </section>
         </div>
         <div class="row">
-            <section class="col-1-2">
-                <h2>Gatuna</h2>
-                <img src="http://placekitten.com/g/275/330" alt="imagem de um gato">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima inventore corrupti, aliquam sed</p>
+            <section class="col-2">
+                <h3>Tigresa</h3>
+                <img src="http://placekitten.com/300/360" alt="imagem de um gato">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima inventore corrupti, aliquam
+                    sed
+                </p>
                 <a href="#">Leia Mais ..</a>
-                lore
+            </section>
+            <section class="col-2">
+                <h3>Gatao</h3>
+                <img src="http://placekitten.com/g/300/360" alt="imagem de um gato">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima inventore corrupti, aliquam
+                    sed
+                </p>
+                <a href="#">Leia Mais ..</a>
             </section>
         </div>
+        <div class="row">
+            <section class="col-1-4">
+                <h3>Kitty</h3>
+                <img src="http://placekitten.com/500/600" alt="imagem de um gato">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima inventore corrupti, aliquam
+                    sed
+                </p>
+                <a href="#">Leia Mais ..</a>
+            </section>
+            <section class="col-3-4">
+                <h3>Tom</h3>
+                <img src="http://placekitten.com/550/670" alt="imagem de um gato">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima inventore corrupti, aliquam
+                    sed
+                </p>
+                <a href="#">Leia Mais ..</a>
+            </section>
+        </div>
+        <div class="row">
+            <section class="col-4">
+                <h3>Gatinha</h3>
+                <img src="http://placekitten.com/300/300" alt="imagem de um gato">
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minima inventore corrupti, aliquam
+                    sed
+                </p>
+                <a href="#">Leia Mais ..</a>
+            </section>
+        <div>
+        <div class="row">
+        <footer class="col-4">
+            <p>Todos os direitos felinos reservados - 2021 </p>
+        </footer>
+        <div>
     </div>
 </body>
 
