--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             </section>
         <div>
         <div class="row">
-        <footer class="col-4">
+        <footer class="col-4 footer">
             <p>Todos os direitos felinos reservados - 2021 </p>
         </footer>
         <div>
